Closed Bug 1301803 Opened 8 years ago Closed 5 years ago

MOZ_CRASH("GFX: Bad `elemType`.") in mozilla::WebGLActiveInfo::WebGLActiveInfo

Categories

(Core :: Graphics: CanvasWebGL, defect, P3)

x86
Android
defect

Tracking

()

RESOLVED FIXED
mozilla67
Tracking Status
firefox-esr60 --- wontfix
firefox65 --- wontfix
firefox66 --- wontfix
firefox67 --- fixed

People

(Reporter: jchen, Assigned: jgilbert)

References

Details

(Keywords: crash, Whiteboard: gfx-noted)

Crash Data

Attachments

(2 files, 1 obsolete file)

This bug was filed from the Socorro interface and is 
report bp-466aceb6-b036-4e22-9932-1d8ae2160909.
=============================================================

Low volume crash that started with the 9-08 Fennec nightly (regression range [1]). So far, there have been 5 crashes for that nightly, making it the #3 crash for Fennec. One noticeable thing about the crashes is that they all come from x86 builds, which is uncommon for Fennec.

Jeff, any idea what could be the cause? Maybe bug 1297924?

[1] https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=91c2b9d5c1354ca79e5b174591dbb03b32b15bbf&tochange=938ce16be25f9c551c19ef8938e8717ed3d41ff5
Flags: needinfo?(jgilbert)
Whiteboard: gfx-noted
(In reply to Jim Chen [:jchen] [:darchons] from comment #0)
> This bug was filed from the Socorro interface and is 
> report bp-466aceb6-b036-4e22-9932-1d8ae2160909.
> =============================================================
> 
> Low volume crash that started with the 9-08 Fennec nightly (regression range
> [1]). So far, there have been 5 crashes for that nightly, making it the #3
> crash for Fennec. One noticeable thing about the crashes is that they all
> come from x86 builds, which is uncommon for Fennec.
> 
> Jeff, any idea what could be the cause? Maybe bug 1297924?
> 
> [1]
> https://hg.mozilla.org/mozilla-central/
> pushloghtml?fromchange=91c2b9d5c1354ca79e5b174591dbb03b32b15bbf&tochange=938c
> e16be25f9c551c19ef8938e8717ed3d41ff5

The pushlog also contains the backout commits of bug 1297924. So I think bug 1297924 isn't related.
Attached patch add note (obsolete) — Splinter Review
I think the crash means we got error in glGetActiveAttrib. The 'elemType' should be zero. I add gfxCriticalNote to log the glError for more debug information.
Flags: needinfo?(jgilbert)
Attachment #8790591 - Flags: review?(jgilbert)
Comment on attachment 8790591 [details] [diff] [review]
add note

Review of attachment 8790591 [details] [diff] [review]:
-----------------------------------------------------------------

::: dom/canvas/WebGLProgram.cpp
@@ +176,5 @@
>          gl->fGetActiveAttrib(prog->mGLName, i, mappedName.Length()+1, &lengthWithoutNull,
>                               &elemCount, &elemType, mappedName.BeginWriting());
> +        GLenum error = gl->fGetError();
> +        if (error != LOCAL_GL_NO_ERROR)
> +            gfxCriticalNote << "Failed to do glGetActiveAttrib: " << error;

{} this line, since it's not a control flow statement.
Attachment #8790591 - Flags: review?(jgilbert) → review+
(In reply to Jeff Gilbert [:jgilbert] from comment #3)
> Comment on attachment 8790591 [details] [diff] [review]
> add note
> 
> Review of attachment 8790591 [details] [diff] [review]:
> -----------------------------------------------------------------
> 
> ::: dom/canvas/WebGLProgram.cpp
> @@ +176,5 @@
> >          gl->fGetActiveAttrib(prog->mGLName, i, mappedName.Length()+1, &lengthWithoutNull,
> >                               &elemCount, &elemType, mappedName.BeginWriting());
> > +        GLenum error = gl->fGetError();
> > +        if (error != LOCAL_GL_NO_ERROR)
> > +            gfxCriticalNote << "Failed to do glGetActiveAttrib: " << error;
> 
> {} this line, since it's not a control flow statement.

Okay.
Address jgilbert's comments.
Attachment #8790591 - Attachment is obsolete: true
Assignee: nobody → ethlin
Status: NEW → ASSIGNED
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/2b01b2c0df5d
Add gfxCriticalNote for glGetActiveAttrib. r=jgilbert
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/2b01b2c0df5d
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Status: RESOLVED → REOPENED
Keywords: leave-open
Resolution: FIXED → ---
Status: REOPENED → ASSIGNED
The leave-open keyword is there and there is no activity for 6 months.
:jgilbert, maybe it's time to close this bug?
Flags: needinfo?(jgilbert)
https://crash-stats.mozilla.com/report/index/a7a088f8-bc12-440e-ba7d-e63530181112#tab-metadata

GraphicsCriticalError:
|[0][GFX1-]: Failed to do glGetActiveAttrib: 1287 (t=144.409) |[1][GFX1-]: Failed to do glGetActiveAttrib: 1287 (t=144.409) 

> #define GL_CONTEXT_LOST                   0x0507

That makes sense!

This will get easier after bug 1492580.
Assignee: demo99 → jgilbert
Severity: critical → major
Depends on: 1492580
Flags: needinfo?(jgilbert)
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/cd7547ae0876
Handle context loss during QueryProgramInfo. r=lsalzman

I'm fairly confident that's it for now.

Status: ASSIGNED → RESOLVED
Closed: 8 years ago5 years ago
Keywords: leave-open
Resolution: --- → FIXED
Target Milestone: mozilla51 → mozilla67

Is this something that should get a Beta approval request or can it ride the trains?

Flags: needinfo?(jgilbert)

Based on the crash volumes, I say ride the trains.

Flags: needinfo?(jgilbert)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: