Bug 1301803 - Handle context loss during QueryProgramInfo. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D17998